# PathMaker

./: .gitmodules  CMakeLists.txt  FileIO.h  GLHelper.hpp  ImguiHelper.hpp  imgui.ini  install_dep.sh  main.cpp  package.xml  pathTracer.py  setting.txt
dataset/: path.txt
